# crystal-mem

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.ru.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  CRYSTAL_FOREST.md  CRYSTAL_FOREST.ru.md  LICENSE  README.md  README.ru.md  USE_CASES.md  USE_CASES.ru.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
crystal_mem/: __init__.py  _octonion_ops.py  core.py  embedders.py  extractors.py  forest.py  mcp_server.py  migrate.py  portability.py  watermark.py
crystal_mem/bench/: capacity.py  conversation.py  episodic.py  forest_scale.py  locomo.py  mem0_compat.py  operations.py
crystal_mem/demos/: d1_personal_ai.py  d2_coding_agent.py  d3_team_shared_pool.py  d4_gdpr_audit.py  d5_portability.py  d6_marketplace.py
crystal_mem/integrations/: __init__.py  claude_desktop_config.example.json  langchain.py  llamaindex.py
docs/: API.md  API.ru.md  QUICKSTART.md  QUICKSTART.ru.md  README.md  README.ru.md
examples/: 01_quickstart.py  02_real_embedder.py  03_persistence.py  04_entities_kg.py  05_export_import.py  06_federated_merge.py  07_watermark.py  08_langchain_basic.py  09_migrate_from_mem0.py  10_capacity_awareness.py  README.md  README.ru.md
tests/: test_core.py  test_embedders.py  test_entity_bound.py  test_forest.py  test_langchain.py  test_langchain_e2e.py  test_mcp.py  test_migrate.py  test_persistence.py  test_portability.py  test_snapshot.py  test_watermark.py
